--- a/themes/stdevs/assets/css/main.css
+++ b/themes/stdevs/assets/css/main.css
@@ -1,9 +1,7 @@
 /**
-* Template Name: Gp
-* Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-* Updated: Aug 15 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
+* Template Name: Studiodevs
+* Updated: Apr 1 2025 with Bootstrap v5.3.3
+* Author: studiodevs.pl
 */
 
 /*--------------------------------------------------------------
@@ -12,12 +10,9 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-    --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
-        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-        "Noto Color Emoji";
-    --heading-font: "Raleway", sans-serif;
-    --nav-font: "Poppins", sans-serif;
+    --default-font: "Gidole", sans-serif;
+    --heading-font: "Quicksand", sans-serif;
+    --nav-font: "Gidole", sans-serif;
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
@@ -517,7 +512,7 @@ h6 {
 .footer {
     color: var(--default-color);
     background-color: var(--background-color);
-    background: url('../img/footer..jpg') no-repeat center center;
+    background: url('../img/cta-bg.jpg') no-repeat center center;
     background-size: cover;
     font-size: 14px;
     position: relative;
@@ -887,6 +882,7 @@ section,
 .section-title p {
     color: var(--heading-color);
     margin: 0;
+    font-family: var(--heading-font);
     font-size: 36px;
     font-weight: 700;
     text-transform: uppercase;
