--- a/themes/stdevs/layouts/default.htm
+++ b/themes/stdevs/layouts/default.htm
@@ -1,73 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+        <title>{{ this.page.title }}</title>
+        <meta name="description" content="" />
+        <meta name="keywords" content="" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{{ this.page.title }}</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+        <!-- Favicons -->
+        <link href="{{ 'assets/img/logo.webp'|theme }}" rel="icon" />
+        <link href="{{ 'assets/img/apple-touch-icon.png'|theme }}" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="{{'assets/img/logo.webp'|theme}}" rel="icon">
-  <link href="{{'assets/img/apple-touch-icon.png'|theme}}" rel="apple-touch-icon">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com" rel="preconnect" />
+        <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <!-- Gidole -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet" />
 
-  <!-- Vendor CSS Files -->
-  <link href="{{'assets/vendor/bootstrap/css/bootstrap.min.css'|theme}}" rel="stylesheet">
-  <link href="{{'assets/vendor/bootstrap-icons/bootstrap-icons.css'|theme}}" rel="stylesheet">
-  <link href="{{'assets/vendor/aos/aos.css'|theme}}" rel="stylesheet">
-  <link href="{{'assets/vendor/swiper/swiper-bundle.min.css'|theme}}" rel="stylesheet">
-  <link href="{{'assets/vendor/glightbox/css/glightbox.min.css'|theme}}" rel="stylesheet">
+        <!-- Qiucksand -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
-  <script src="https://kit.fontawesome.com/3b577f4961.js" crossorigin="anonymous"></script>
+        <!-- Vendor CSS Files -->
+        <link href="{{ 'assets/vendor/bootstrap/css/bootstrap.min.css'|theme }}" rel="stylesheet" />
+        <link href="{{ 'assets/vendor/bootstrap-icons/bootstrap-icons.css'|theme }}" rel="stylesheet" />
+        <link href="{{ 'assets/vendor/aos/aos.css'|theme }}" rel="stylesheet" />
+        <link href="{{ 'assets/vendor/swiper/swiper-bundle.min.css'|theme }}" rel="stylesheet" />
+        <link href="{{ 'assets/vendor/glightbox/css/glightbox.min.css'|theme }}" rel="stylesheet" />
 
-    <!-- Leaflet -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+        <script src="https://kit.fontawesome.com/3b577f4961.js" crossorigin="anonymous"></script>
 
-  <!-- Main CSS File -->
-  <link href="{{'assets/css/main.css' | theme }}" rel="stylesheet">
+        <!-- Leaflet -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" ></script>
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <!-- Main CSS File -->
+        <link href="{{ 'assets/css/main.css' | theme }}" rel="stylesheet" />
 
-  <!-- =======================================================
-  * Template Name: Gp
-  * Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-  * Updated: Aug 15 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
-<body class="index-page">
-    {% partial 'header' %}
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" ></script>
+    </head>
+    <body class="index-page">
+        {% partial 'header' %}
         {% page %}
-    {% partial 'footer' %}
-  
-  <!-- Vendor JS Files -->
-  <script src="{{'assets/vendor/php-email-form/validate.js' | theme}}"></script>
-  <script src="{{'assets/vendor/aos/aos.js'|theme}}"></script>
-  <script src="{{'assets/vendor/swiper/swiper-bundle.min.js'|theme}}"></script>
-  <script src="{{'assets/vendor/glightbox/js/glightbox.min.js'|theme}}"></script>
-  <script src="{{'assets/vendor/imagesloaded/imagesloaded.pkgd.min.js'|theme}}"></script>
-  <script src="{{'assets/vendor/isotope-layout/isotope.pkgd.min.js'|theme}}"></script>
-  <script src="{{'assets/vendor/purecounter/purecounter_vanilla.js'|theme}}"></script>
+        {% partial 'footer' %}
 
-  <!-- Main JS File -->
-  <script src="{{'assets/js/main.js'|theme}}"></script>
-</body>
-        <link rel="stylesheet"
-              href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-              integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-              crossorigin="" />
-        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-                integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-                crossorigin=""></script>
+        <!-- Vendor JS Files -->
+        <script src="{{'assets/vendor/php-email-form/validate.js' | theme}}"></script>
+        <script src="{{'assets/vendor/aos/aos.js'|theme}}"></script>
+        <script src="{{'assets/vendor/swiper/swiper-bundle.min.js'|theme}}"></script>
+        <script src="{{'assets/vendor/glightbox/js/glightbox.min.js'|theme}}"></script>
+        <script src="{{'assets/vendor/imagesloaded/imagesloaded.pkgd.min.js'|theme}}"></script>
+        <script src="{{'assets/vendor/isotope-layout/isotope.pkgd.min.js'|theme}}"></script>
+        <script src="{{'assets/vendor/purecounter/purecounter_vanilla.js'|theme}}"></script>
 
+        <!-- Main JS File -->
+        <script src="{{'assets/js/main.js'|theme}}"></script>
+    </body>
 </html>
