--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -5,18 +5,56 @@
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div>
                         <a href="{{ 'home'|page }}" class="logo d-flex align-items-center">
-                            <h4 class="footer-logo"><span class="studio">Studio</span><span class="devs">DEVS</span></h4>
+                            <h4 class="footer-logo">
+                                <span class="studio">Studio</span><span class="devs">DEVS</span>
+                            </h4>
                         </a>
+                        <div class="footer-contact pt-3">
+                            <p>Chańcza 79</p>
+                            <p>26-035, Chańcza</p>
+                            <p class="mt-3"><strong>Telefon:</strong> <span><a href="tel:724414081">+48 724 414 081</a></span></p>
+                            <p><strong>Email:</strong> <span><a href="mailto:kontakt@studiodevs.pl">kontakt@studiodevs.pl</a></span></p>
+                        </div>
+                        <div class="social-links d-flex mt-4">
+                            <a href=""><i class="bi bi-twitter-x"></i></a>
+                            <a href=""><i class="bi bi-facebook"></i></a>
+                            <a href=""><i class="bi bi-instagram"></i></a>
+                            <a href=""><i class="bi bi-linkedin"></i></a>
+                            <a href=""><i class="bi bi-github"></i></a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-lg-2 col-md-3 footer-links">
-                    <div class="footer-contact pt-3">
-                        <p>Chańcza 79</p>
-                        <p>26-035 Chańcza</p>
-                        <p class="mt-3"><strong>Telefon:</strong><span><a href="tel:724414081"> 724 414 081</a></span></p>
-                        <p><strong>Email:</strong> <span><a href="mailto:kontakt@studiodevs.pl">kontakt@studiodevs.pl</a></span></p>
-                    </div>
+                    <h4>Na skróty</h4>
+                    <ul>
+                        <li><i class="bi bi-chevron-right"></i> <a href="{{ 'blog'|page }}"> Blog</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="#about"> O nas</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Usługi</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Warunki serwisu</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Polityka prywatności</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-2 col-md-3 footer-links">
+                    <h4>Nasze portale</h4>
+                    <ul>
+                        <li><i class="bi bi-chevron-right"></i> <a href="https://chancza.com.pl"> Portal Chańcza</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="https://mojakgp.pl"> Moja KGP</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-4 col-md-12 footer-newsletter">
+                    <h4>Newsletter</h4>
+                    <p>Zapisz się nasz newsletter i bądź na bieżąco</p>
+                    <form action="forms/newsletter.php" method="post" class="php-email-form">
+                        <div class="newsletter-form">
+                            <input type="email" name="email" /><input type="submit" value="Subscribe" />
+                        </div>
+                        <div class="loading">Loading</div>
+                        <div class="error-message"></div>
+                        <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -24,7 +62,10 @@
 
     <div class="copyright">
         <div class="container text-center">
-            <p><span>Copyright</span> © <span>{{ 'now'|date('Y') }}</span><strong class="px-1 devs">StudioDEVS</strong></p>
+            <p>
+                <span>Copyright</span> © <span>{{ 'now'|date('Y') }}</span
+                ><strong class="px-1 devs">StudioDEVS</strong>
+            </p>
         </div>
     </div>
 </footer>
