--- a/plugins/stdevs/toolbox/views/mail/gwent.htm
+++ b/plugins/stdevs/toolbox/views/mail/gwent.htm
@@ -9,3 +9,13 @@ Cześć {{ name }},
 <p>Ten link może być pomocny:</p>
 
 <a href ="https://www.playgwent.com/en/decks/builder">Biblioteka Gwinta</a>
+
+<span style="display: block; text-align: center; font-style: italic;">"{{ flavor.flavor }}"</span></br>
+<span style="display: block; text-align: center; font-style: bold;">"{{ flavor.name }}"</span>
+
+<p>Debug - ścieżka: {{ logoPath }}</p>
+
+<img src="{{ message.embed(logoPath) }}" 
+             alt="Gwent Logo" 
+             style="max-width: 200px; margin-bottom: 20px;">
+
