--- a/themes/stdevs/layouts/default.htm
+++ b/themes/stdevs/layouts/default.htm
@@ -6,6 +6,7 @@ description = "Default layout"
 
 <head>
     {% partial 'common/meta' %}
+    <script src="{{ ['@framework','@framework.extras'] |theme}}"></script>
 </head>
 
 <body class="bg-white text-gray-900">
@@ -27,10 +28,8 @@ description = "Default layout"
 
 </html>
 <script>
-    // Pobierz przycisk
     const scrollToTopBtn = document.getElementById('scrollToTop');
     
-    // Pokaż/ukryj przycisk przy scrollowaniu
     window.addEventListener('scroll', function() {
         if (window.pageYOffset > 300) {
             scrollToTopBtn.classList.remove('opacity-0', 'invisible');
@@ -41,7 +40,6 @@ description = "Default layout"
         }
     });
     
-    // Płynne przewijanie do góry po kliknięciu
     scrollToTopBtn.addEventListener('click', function() {
         window.scrollTo({
             top: 0,
